Fix toggle limited buttons being hard to see in dark mode

--- a/display/shared/styling/themes/werewolf-theme.less
+++ b/display/shared/styling/themes/werewolf-theme.less
@@ -132,6 +132,15 @@
       background: var(--system-dark-color-2);
     }
 
+    /* Limited View Toggle Button */
+    .toggle-limited {
+      color: var(--system-dark-color-4);
+    }
+
+    .toggle-limited:not(.visible) {
+      color: var(--system-dark-color-8);
+    }
+
     /* Navbar */
     .sheet-tabs {
       .navicon,
